Fix tags padding on mobile

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -179,6 +179,10 @@
 
 @media screen and (max-width: $layout-breakpoint-sm) {
   .post {
+    &__tags {
+      padding: 0 15px;
+    }
+
     &__footer {
       justify-content: center;
 
